fixed small overlap in css

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 .tool_bar{
   width: 250px;
   top:50;
-  left: 80;   
+  left: 30;   
   margin-left: 40px;
   position:fixed;
   float: left;
